# HealthDashPy

./: README.md  pyproject.toml
docs/: search.js  src.html
docs/src/: app.html  callbacks.html  data.html  layout.html  run.html  theme.html
src/health/: app.py  callbacks.py  data.py  layout.py  run.py  theme.py
